--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <jetty-version>9.4.14.v20181114</jetty-version>
     <jersey-version>2.26</jersey-version>
 	  
+  <!-- FIXME sonar -->  
     <sonar.organization>cristiansilvera</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>	
 
